# vortex

./: .gitignore  README.md  pyproject.toml
configs/: vehicle_v1.yaml
data/raw/: NOGARO.data
experiments/: 01_baseline_lap.py
vortex/: __init__.py
vortex/core/: __init__.py  physics.py  track.py
vortex/optimization/: __init__.py  solver.py
vortex/simulation/: __init__.py
vortex/utils/: __init__.py  config.py
vortex/visualization/: __init__.py  animation.py  plotting.py
